# dcf-valuation-platform

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: styles.css
docs/: BASIS_FEATURE_MAP.md
pages/: 0_Method_Selection.py  10_CCV_Setup.py  11_CCV_Executive_Summary.py  12_CCV_Historical_Performance.py  13_CCV_Comparable_Companies.py  14_CCV_Report_Center.py  1_Executive_Summary.py  20_DCF_Coming_Soon.py  2_Historical_Performance.py  30_Precedent_Coming_Soon.py  3_Forecast_Model.py  40_Comparable_Analysis.py  4_DCF_Valuation.py  50_DCF_Analysis.py  5_Comparable_Companies.py  6_Sensitivity_and_Scenarios.py  7_Report_Center.py  8_Private_Company_DCF.py
scripts/: generate_sample_reports.py
src/: __init__.py  ccv_provider.py  ccv_reporting.py  ccv_state.py  ccv_ui.py  data_loader.py  formatting.py  reporting.py  ui.py  visualizations.py
tests/: conftest.py  test_ccv.py  test_engine.py  test_market_tools.py  test_private_company.py  test_reporting.py  test_streamlit.py
valuation_platform/: __init__.py  ccv.py  config.py  data.py  market_tools.py  model.py  pipeline.py  private_company.py  professional_analysis.py
