[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-valuation-platform"
version = "2.1.0"
description = "Streamlit public and private-company DCF and comparable-company valuation platform"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.39,<2",
  "pandas>=2.1,<3",
  "numpy>=1.26,<3",
  "yfinance>=0.2.40,<2",
  "plotly>=5.24,<7",
  "matplotlib>=3.8,<4",
  "xlsxwriter>=3.2,<4",
  "reportlab>=4.2,<5",
  "Pillow>=10,<13",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "openpyxl>=3.1,<4"]

[tool.setuptools.packages.find]
include = ["valuation_platform*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
